# clang

./: .gitignore  CMakeLists.txt  README.md  arifmprogress.txt  complex_num.c  double_array.c  removeElement.txt
home7/: deleteFromHead.с  deleteFromTail.c  findByValue.с  sizeList.c
home8/: bin_search.c  bin_search_func.c  bin_search_func2.c  matrices.c  matrices.h  pro
l1/: 2d_arrays-example.c  dyn_mem.c  pass_argument_by_pointer.c  structs.c
l10/: pro  proces.c  proces_1.c  proces_2.c  proces_function.c
l11/: .prog1.c.kate-swp  compare_string.c  pro  prog1.c  prog3_1.c  prog3_2.c  prog3_3.c  word_kolvo.c
l12/: .turn_value.c.swo  .turn_value.c.swp  number_parser.c  pro  rydenko_3_18.c  rydenko_3_18.c.Uw4295  rydenko_3_18.c.Vr2191  rydenko_3_21.c  rydenko_3_6.c  turn_value.c
l13_signal/: pro  signal_25_and_stop.c  signal_2kanala.c  signal_sgalrm.c  signal_test.c
l2/: passing_arguments.c  program  scanf.c  some_logic.c  some_logic.s  some_struct.c  some_struct.h  some_struct.s
l3/: basicIO.c  basicIO2.c  data.txt  example2.txt  output.txt
l4/: err.c  removeElement.c  triangle.c  triangle_data.txt
l5/: dynam_array.c  dynam_array.h  dynam_array_test.c  time_complexity.txt
l6/: link_list.c  link_list.h  ll_test.c  time_complexity.txt
l7/: link_list.c  link_list.h  link_list_test.c  prefix_postfix.c
l8/: pro  tree.c  tree.h  tree_test.c
l9/: dont_copy_arrays_with_that_way.c  list_test.c  new_string_cutter.c  new_string_cutter.h  new_string_cutter_function.c  old_version.c  pro  string_cutter  string_cutter.c  string_cutter_v2.c  swich_kolvo_simbol.c  (+2 more)
(+2 files in other folders)
